# Inclusive.AI-DAO

./: README.md
server/: .dockerignore  .eslintrc.js  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile.alt  README.md  fly.toml  package.json  pnpm-lock.yaml  tsconfig.json
server/.platform/nginx/conf.d/: reverse-proxy.conf
server/db-config/: fly.toml
server/src/: app.ts  errors.rs  main.rs  routes.rs  socket.ts
server/src/config/: constant.ts  env-vars.ts  index.ts  logger.ts  open-ai.ts  passport.ts
server/src/controllers/: AiChat.controller.ts  App.controller.ts  Chat.controller.ts  Chat.controller.ws.ts  Survey.controller.ts  User.controller.ts
server/src/data/: erc20-mintable-abi.ts  profanity-words-list.ts  prompts.ts
server/src/database/: data-source.ts  entity-types.ts
server/src/database/entity/: AiResponse.ts  Chat.ts  (+7 more)
server/src/handlers/: gpt.rs  mod.rs  websocket.rs
server/src/middleware/: Auth.middleware.ws.ts  CustomError.middleware.ts  FinalSay.middleware.ts  JwtAuth.middleware.ts  MorganLogger.middleware.ts  index.ts
server/src/scripts/: create-pods.ts  create-proposal.ts  create-value-questions.ts  edit-space.ts  export-by-voters-phase.ts  export-data.ts  export-new-users.ts  export-votes.ts  initialize.ts  run-script-manual.ts  select-new-users.ts
server/src/socket/: JwtMiddleware.ts  index.ts
server/src/states/: mod.rs
server/src/types/: index.ts
server/src/utils/: assign-pod.ts  assign-profile-pics.ts  assign-snapshot.ts  assign-vote-power.ts  index.ts  mod.rs  remove-profanity.ts  select-new-users.ts  snapshot.ts
(+60 files in other folders)
