[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["ws"] }
axum-extra = "0.7.7"
axum-macros = "0.3.8"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
http = "0.2.9"
log = "0.4.19"
reqwest =  { version = "0.11", features = ["json"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.3", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
